tests/NormalTests/paczka1/fuzzy1/54202802.err
Error in line 11: KEL7f4MV A279 205,5
Error in line 13: JZe3dRwT S928 25,7
Error in line 16: OFBCGKh A279 73,0
Error in line 28: 8v2DV4 S928 14,4
Error in line 17: cWGK S811 24,9
Error in line 32: cWGK A279 33,6
Error in line 36: KEL7f4MV A279 52,9
